自定义组件

--- a/components/CityList/cityList.wxml
+++ b/components/CityList/cityList.wxml
@@ -1,16 +1,13 @@
 <!--components/CityList/cityList.wxml-->
 
 <view class='citylist'>
-  <block wx:for="{{dataList}}" wx:for-index="idx" wx:for-item="item"> 
-    <view class='title' bindtap='slideup()'>
-      <text>{{item.name}}</text>
-      <view class='arrow' animation="{{animationData}}"></view>
-    </view>
-    <view class='city-list' wx:if="{{isShow}}">
-      <block wx:for="{{item.city}}" wx:for-index="idx" wx:for-item="cityitem">
-        <view class='item' bindtap=''>{{ cityitem.name }}</view>
-      </block> 
-    </view>
-  </block>
-
+  <view class='title' bindtap='slideup'>
+    <text>{{listData.name}}</text>
+    <view class='arrow' animation="{{animationData}}"></view>
+  </view>
+  <view class='city-list' wx:if="{{isShow}}">
+    <block wx:for="{{listData.city}}" wx:for-index="idx" wx:for-item="cityitem">
+      <view class='item {{isActive==cityitem.id?"active":""}}' data-index="{{cityitem.id}}" bindtap='selectItem'>{{ cityitem.name }}</view>
+    </block> 
+  </view>
 </view>
