--- a/components/CityList/cityList.wxss
+++ b/components/CityList/cityList.wxss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
 }
-.citylist .title{
+.citylist>.title{
   padding: 5px 20px;
   font-size: 16px;
   background-color: #262626;
@@ -13,7 +13,7 @@
   justify-content: space-between
 }
 
-.citylist .arrow{
+.title>.arrow{
   width: 0;
   height: 0;
   border-top: 8px solid transparent;
@@ -29,7 +29,7 @@
   flex-direction: row;
   flex-wrap:wrap;
 }
-.city-list .item{
+.city-list>.item{
   padding: 2px 12px;
   color: #000;
   letter-spacing: 2px;
@@ -37,4 +37,8 @@
   border-radius: 5px; 
   margin-right: 10px;
   margin-bottom: 10px; 
+}
+.city-list>.active{
+  background: #fed213;
+  color:#fff;
 }
