--- a/pages/select/select.wxml
+++ b/pages/select/select.wxml
@@ -2,14 +2,16 @@
 <view class='container'>
 <image src='../../images/bg.png' class='bg'></image>
   <view class='header'>
-    <view class='hotcity' animation="{{animationData}}" bindtap='rotate'>热门城市</view>
+    <view class='hotcity' bindtap='rotate'>热门城市</view>
     <view class='hotcity-list'>
       <block wx:for="{{hotCity}}" wx:for-index="idx" wx:for-item="item">
-        <view class='item'>{{ item.name }}</view>
+        <view class='item {{isActive?"active":""}}' data-index='{{idx}}' bindtap='selectItem'>{{ item.name }}</view>
       </block>
     </view>
   </view>
-  <citylist dataList="{{cityList}}"></citylist>
+  <block wx:for="{{cityList}}" wx:for-index="idx" wx:for-item="item">
+    <citylist list-data="{{item}}" bind:myevent="onMyEvent"></citylist>
+  </block>
   <scroll-view scroll-y>
 
   </scroll-view>
