--- a/pages/select/select.wxss
+++ b/pages/select/select.wxss
@@ -19,7 +19,7 @@
   flex-direction: row;
   flex-wrap:wrap;
 }
-.hotcity-list .item{
+.hotcity-list>.item{
   padding: 2px 12px;
   color: #000;
   letter-spacing: 2px;
@@ -27,4 +27,8 @@
   border-radius: 5px; 
   margin-right: 10px;
   margin-bottom: 10px; 
+}
+.hotcity-list>.active{
+  background: #fed213;
+  color:#fff;
 }
