--- a/components/CityList/cityList.wxml
+++ b/components/CityList/cityList.wxml
@@ -7,7 +7,7 @@
   </view>
   <view class='city-list' wx:if="{{isShow}}">
     <block wx:for="{{listData.city}}" wx:for-index="idx" wx:for-item="cityitem">
-      <view class='item {{isActive==cityitem.id?"active":""}}' data-index="{{cityitem.id}}" bindtap='selectItem'>{{ cityitem.name }}</view>
+      <view class='item {{isActiveArr[idx]?"active":""}}' data-id="{{cityitem.id}}" data-index='idx' bindtap='selectItem'>{{ cityitem.name }}{{isActiveArr}}</view>
     </block> 
   </view>
 </view>
