--- a/pages/select/select.wxml
+++ b/pages/select/select.wxml
@@ -1,4 +1,5 @@
 <!--pages/select/select.wxml-->
+<loading hidden="{{hiddenLoading}}">数据加载中</loading>
 <view class='container'>
 <image src='../../images/bg.png' class='bg'></image>
   <view class='header'>
@@ -13,9 +14,7 @@
     <citylist list-data="{{item}}"></citylist>
   </block>
   <view class='sub-btn' wx:if="{{cityList.length}}" bindtap='subfn'>提交</view>
-  <scroll-view scroll-y>
 
-  </scroll-view>
   <!-- 提示框 -->
   <dialog id='dialog' title='提示' content='确定您已经选择完毕了吗？' cancelText='再想想' confirm='就这些' bind:cancelEvent="_cancelEvent" bind:confirmEvent="_confirmEvent"></dialog>
 
