--- a/components/CityList/cityList.wxml
+++ b/components/CityList/cityList.wxml
@@ -6,7 +6,7 @@
     <view class='arrow' animation="{{animationData}}"></view>
   </view>
   <view class='city-list' wx:if="{{isShow}}">
-    <block wx:for="{{listData.city}}" wx:for-index="idx" wx:for-item="cityitem">
+    <block wx:for="{{listData.city}}" wx:key="idx" wx:for-index="idx" wx:for-item="cityitem">
       <view class='item {{isActiveArr[idx]?"active":""}}' data-id="{{cityitem.id}}" data-index='{{idx}}' bindtap='selectItem'>{{ cityitem.name }}</view>
     </block> 
   </view>
